ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: internrfc.com
    http:
      paths:
      - path: /rapport(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: work-user-service
            port:
              number: 80
      - path: /FormUser(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: work-user-service
            port:
              number: 80
      - path: /user(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /home(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /contact(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /about(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /calendrier(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: calendar-user-service
            port:
              number: 80
      - path: /projet(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: project-user-service
            port:
              number: 80
      - path: /projetDetails(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: project-user-service
            port:
              number: 80
